--- a/auth0-variables.js.example
+++ b/auth0-variables.js.example
@@ -1,3 +1,3 @@
-var AUTH0_CLIENT_ID='{CLIENT_ID}';
-var AUTH0_DOMAIN='{DOMAIN}';
+var AUTH0_CLIENT_ID='WPabtyt2_iYzodyLUHe6xQkleaQ-94iI';
+var AUTH0_DOMAIN='dev-dv6xb39g.auth0.com';
 var AUTH0_CALLBACK_URL=location.href;
